[package]
name = "freee-accounting-sdk-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
r2d2 = "0.8"
r2d2_sqlite = "0.19"
rusqlite = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0"
reqwest = "0.11"
rppal = "0.13.1"

openapi-sdk = { path = "../freee-accounting-sdk-rust/sdk" }
